--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <link rel="stylesheet" href="style1.css">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Button</title>
+  <title>Typing Speed Test in Javascript</title>
 </head>
 <body>
   <button>Start</button>
