--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
+
+<h1> Test </h1>
+
 <head>
   <link rel="stylesheet" href="style1.css">
   <meta charset="UTF-8">
@@ -7,7 +10,9 @@
   <title>Typing Speed Test in Javascript</title>
 </head>
 <body>
-  <button>Start</button>
+  <div id="startButtonContainer"><button>Start</button></div>
+
+
 
   <script src="js/script1.js"></script>
 </body>
