--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<h1> Test </h1>
+ <div id="headerContainer"><h1> Test </h1></div>
 
 <head>
   <link rel="stylesheet" href="style1.css">
