--- a/index.html
+++ b/index.html
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-
- <div id="headerContainer"><h1> Test </h1></div>
-
 <head>
-  <link rel="stylesheet" href="style1.css">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Typing Speed Test in Javascript</title>
+  <title>Typing Speed Test</title>
+  <link rel="stylesheet" href="style1.css">
 </head>
 <body>
-  <div id="startButtonContainer"><button>Start</button></div>
-
-
-
+  <header>
+    <h1>Welcome to Typing Speed Test</h1>
+  </header>
+  <main>
+    <div id="startButtonContainer">
+      <button id="startButton">Start Test</button>
+    </div>
+  </main>
+  <footer>
+    <p>  Your mother</p>
+  </footer>
   <script src="js/script1.js"></script>
 </body>
 </html>
