--- a/index.html
+++ b/index.html
@@ -8,15 +8,22 @@
 </head>
 <body>
   <header>
-    <h1>Welcome to Typing Speed Test</h1>
+    <h1>Games for when you're bored</h1>
   </header>
   <main>
     <div id="startButtonContainer">
       <button id="startButton">Start Test</button>
+      <button class="blankPageButton" data-page="HangmanGame/HangmanGame.html">Hangman Game</button>
+      <button class="blankPageButton" data-page="blank2.html">Blank Page 2</button>
+      <button class="blankPageButton" data-page="blank3.html">Blank Page 3</button>
+      <button class="blankPageButton" data-page="blank4.html">Blank Page 4</button>
+      <button class="blankPageButton" data-page="blank5.html">Blank Page 5</button>
+      <button class="blankPageButton" data-page="blank6.html">Blank Page 6</button>
+      <button class="blankPageButton" data-page="blank7.html">Blank Page 7</button>
     </div>
   </main>
   <footer>
-    <p>  Your mother</p>
+    <p>Your mother</p>
   </footer>
   <script src="js/script1.js"></script>
 </body>
