--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
   </header>
   <main>
     <div id="startButtonContainer">
-      <button id="startButton">Start Test</button>
+      <button id="startButton">Typing speed test</button>
       <button class="blankPageButton" data-page="HangmanGame/HangmanGame.html">Hangman Game</button>
-      <button class="blankPageButton" data-page="blank2.html">Blank Page 2</button>
+      <button class="blankPageButton" data-page="SnakeGame/SnakeGame.html">Snake Game</button>
       <button class="blankPageButton" data-page="blank3.html">Blank Page 3</button>
       <button class="blankPageButton" data-page="blank4.html">Blank Page 4</button>
       <button class="blankPageButton" data-page="blank5.html">Blank Page 5</button>
