--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
       <button id="startButton">Typing speed test</button>
       <button class="blankPageButton" data-page="HangmanGame/HangmanGame.html">Hangman Game</button>
       <button class="blankPageButton" data-page="SnakeGame/SnakeGame.html">Snake Game</button>
-      <button class="blankPageButton" data-page="blank3.html">Blank Page 3</button>
-      <button class="blankPageButton" data-page="blank4.html">Blank Page 4</button>
+      <button class="blankPageButton" data-page="Drawing/Drawing.html">Drawing Game</button>
+      <button class="blankPageButton" data-page="Piano/piano.html">Piano Game</button>
       <button class="blankPageButton" data-page="blank5.html">Blank Page 5</button>
       <button class="blankPageButton" data-page="blank6.html">Blank Page 6</button>
       <button class="blankPageButton" data-page="blank7.html">Blank Page 7</button>
