--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <button class="blankPageButton" data-page="SnakeGame/SnakeGame.html">Snake Game</button>
       <button class="blankPageButton" data-page="Drawing/Drawing.html">Drawing Game</button>
       <button class="blankPageButton" data-page="Piano/piano.html">Piano Game</button>
-      <button class="blankPageButton" data-page="blank5.html">Blank Page 5</button>
+      <button class="blankPageButton" data-page="memory/memory.html">Memory Game</button>
       <button class="blankPageButton" data-page="blank6.html">Blank Page 6</button>
       <button class="blankPageButton" data-page="blank7.html">Blank Page 7</button>
     </div>
