--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <button class="blankPageButton" data-page="Drawing/Drawing.html">Drawing Game</button>
       <button class="blankPageButton" data-page="Piano/piano.html">Piano Game</button>
       <button class="blankPageButton" data-page="memory/memory.html">Memory Game</button>
-      <button class="blankPageButton" data-page="blank6.html">Blank Page 6</button>
+      <button class="blankPageButton" data-page="Tic Tac Toe/Tic.html">Tic Tac Toe</button>
       <button class="blankPageButton" data-page="blank7.html">Blank Page 7</button>
     </div>
   </main>
