--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <button class="blankPageButton" data-page="Drawing/Drawing.html">Drawing Game</button>
       <button class="blankPageButton" data-page="Piano/piano.html">Piano Game</button>
       <button class="blankPageButton" data-page="memory/memory.html">Memory Game</button>
-      <button class="blankPageButton" data-page="TicTacToe/Tic.html">Tic Tac Toe</button>
+      <button class="blankPageButton" data-page="TicTacToe/tic.html">Tic Tac Toe</button>
     </div>
   </main>
   <footer>
