--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       <button class="blankPageButton" data-page="Piano/piano.html">Piano Game</button>
       <button class="blankPageButton" data-page="memory/memory.html">Memory Game</button>
       <button class="blankPageButton" data-page="TicTacToe/tic.html">Tic Tac Toe</button>
+      <button class="blankPageButton" data-page="Word Scramble Game/wrld.html">Word Scramble Game</button>
     </div>
   </main>
   <footer>
