--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
   <main>
     <div id="startButtonContainer">
       <button id="startButton">Typing speed test</button>
-      <button class="blankPageButton" data-page="HangmanGame/HangmanGame.html">Hangman Game</button>
-      <button class="blankPageButton" data-page="SnakeGame/SnakeGame.html">Snake Game</button>
-      <button class="blankPageButton" data-page="Drawing/Drawing.html">Drawing Game</button>
-      <button class="blankPageButton" data-page="Piano/piano.html">Piano Game</button>
-      <button class="blankPageButton" data-page="memory/memory.html">Memory Game</button>
+      <button class="blankPageButton" data-page="HangmanGame/HangmanGame.html">Hangman</button>
+      <button class="blankPageButton" data-page="SnakeGame/SnakeGame.html">Snake</button>
+      <button class="blankPageButton" data-page="Drawing/Drawing.html">Drawing</button>
+      <button class="blankPageButton" data-page="Piano/piano.html">Piano</button>
+      <button class="blankPageButton" data-page="memory/memory.html">Memory</button>
       <button class="blankPageButton" data-page="TicTacToe/tic.html">Tic Tac Toe</button>
-      <button class="blankPageButton" data-page="Word Scramble Game/wrld.html">Word Scramble Game</button>
+      <button class="blankPageButton" data-page="Word Scramble Game/wrld.html">Word Scramble</button>
     </div>
   </main>
   <footer>
